--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,8 +1,11 @@
 <h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
 <p><a href="https://github.com/q36180005/cad2023/settings/pages">倉儲</a></p>
-<h1>任務</h1>
+<h1>Yeah body (Click in ◀︎◀︎◀︎)</h1>
 <h2>w4</h2>
+<p>1.建立線上考試帳號並將Github建立2023倉儲,弄Github Page搞出靜態網站</p>
+<p>2.利用Replit連結Github的網站,將改版後的資料內容generate到Github</p>
+<p>3.用自選CAD套件(Inventor, Soliwork, Sloid Edge, NX, Creo, Oneshape, Solvespace等等套件)完成零組件<em>任務一</em>的設計繪圖</p>
 <h2>W5</h2>
 <h2>W6</h2>
 <h2>W7</h2>
