--- a/content/w4.html
+++ b/content/w4.html
@@ -143,6 +143,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Yeah body (Click in ◀︎◀︎◀︎) << <a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Previous</a> <a href='W5.html'>Next</a> >> W5<br /><h1>w4</h1>
+<p>1.建立線上考試帳號並將Github建立2023倉儲,弄Github Page搞出靜態網站</p>
+<p>2.利用Replit連結Github的網站,將改版後的資料內容generate到Github</p>
+<p>3.用自選CAD套件(Inventor, Soliwork, Sloid Edge, NX, Creo, Oneshape, Solvespace等等套件)完成零組件<em>任務一</em>的設計繪圖</p>
+<p>4.<em>(老師我愛你)</em></p>
 <br />Yeah body (Click in ◀︎◀︎◀︎) << <a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Previous</a> <a href='W5.html'>Next</a> >> W5</div>
         
     <!-- footer -->
