--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -6,6 +6,7 @@
 <p>1.建立線上考試帳號並將Github建立2023倉儲,弄Github Page搞出靜態網站</p>
 <p>2.利用Replit連結Github的網站,將改版後的資料內容generate到Github</p>
 <p>3.用自選CAD套件(Inventor, Soliwork, Sloid Edge, NX, Creo, Oneshape, Solvespace等等套件)完成零組件<em>任務一</em>的設計繪圖</p>
+<p>4.<em>(老師我愛你)</em></p>
 <h2>W5</h2>
 <h2>W6</h2>
 <h2>W7</h2>
