--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -8,6 +8,9 @@
 <p>3.用自選CAD套件(Inventor, Soliwork, Sloid Edge, NX, Creo, Oneshape, Solvespace等等套件)完成零組件<em>任務一</em>的設計繪圖</p>
 <p>4.<em>(老師我愛你)</em></p>
 <h2>W5</h2>
+<p>1.選擇用soliwork畫出零組件</p>
+<p>2.認識CoppeliaSim然後學</p>
+<p>3.<em>(老師我給你一個讚)</em></p>
 <h2>W6</h2>
 <h2>W7</h2>
 <h1>任務一</h1>
