--- a/config/content.htm
+++ b/config/content.htm
@@ -18,6 +18,9 @@
 <p><a href="https://41123120.github.io/cad2023_ag1/content/index.html">第一組age1</a> {<a href="https://github.com/41123120/cad2023_ag1">repo</a>}</p>
 <p><a href="https://probe2004.github.io/cad2023_ag2/content/%E5%BE%85%E8%BE%A6%E4%BA%8B%E9%A0%85.html"></a></p>
 <h2>W7</h2>
+<p>1.在w9前畫出3D可列印的零組件模型,包含各個CAD套件以及繪圖完整過程影片</p>
+<p>2.</p>
+<p>   <span>\_____________/</span><br/><span>  _/_|_________|_\_</span><br/><span>   /⭕️⭕️_____⭕️⭕️\     ----&lt;&lt;&lt;&lt;</span><br/><span>  |___/_Peggy_\___|</span><br/><span>  \oo|_|_|__|_|_|oo/</span></p>
 <h1>任務一</h1>
 <h2>磁力吸引</h2>
 <p><a href="https://drive.google.com/drive/folders/1BO7KDxjQDuT_zahN7FbU3u7BWFQ_5aKJ?usp=sharing">零件檔案</a></p>
