--- a/content/W7.html
+++ b/content/W7.html
@@ -143,7 +143,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一<br /><h1>W7</h1>
-<br />W6 << <a href='W6.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一</div>
+<p>1.在w9前畫出3D可列印的零組件模型,包含各個CAD套件以及繪圖完整過程影片</p>
+<p>2.</p>
+<p>   \______________/<br/>  _/_|__________|_\_<br/>   /⭕️⭕️___⭕️⭕️\             -----&lt;&lt;&lt;我努力了<br/>  |___/_Peggy_\____|<br/>  \oo|_|_|____|_|_|oo/</p><br />W6 << <a href='W6.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一</div>
         
     <!-- footer -->
       <div class="container">
