--- a/content/index.html
+++ b/content/index.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Yeah body (Click in ◀︎◀︎◀︎)</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a></li></ul><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='磁力吸引.html'>磁力吸引</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Yeah body (Click in ◀︎◀︎◀︎)</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='w8.html'>w8</a></li></ul><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='磁力吸引.html'>磁力吸引</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
