--- a/content/W7.html
+++ b/content/W7.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Yeah body (Click in ◀︎◀︎◀︎)</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a></li></ul><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='磁力吸引.html'>磁力吸引</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Yeah body (Click in ◀︎◀︎◀︎)</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='w8.html'>w8</a></li></ul><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='磁力吸引.html'>磁力吸引</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,10 +142,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一<br /><h1>W7</h1>
+    <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='w8.html'>Next</a> >> w8<br /><h1>W7</h1>
 <p>1.在w9前畫出3D可列印的零組件模型,包含各個CAD套件以及繪圖完整過程影片</p>
 <p>2.</p>
-<p>   \______________/<br/>  _/_|__________|_\_<br/>   /⭕️⭕️___⭕️⭕️\             -----&lt;&lt;&lt;我努力了<br/>  |___/_Peggy_\____|<br/>  \oo|_|_|____|_|_|oo/</p><br />W6 << <a href='W6.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一</div>
+<p>   \______________/<br/>  _/_|__________|_\_<br/>   /⭕️⭕️___⭕️⭕️\             -----&lt;&lt;&lt;我努力了<br/>  |___/_Peggy_\____|<br/>  \oo|_|_|____|_|_|oo/</p>
+<br />W6 << <a href='W6.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
         
     <!-- footer -->
       <div class="container">
