--- a/content/w8.html
+++ b/content/w8.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,8 +142,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='磁力吸引.html'>Next</a> >> 磁力吸引<br /><h1>任務一</h1>
-<br />w8 << <a href='w8.html'>Previous</a> <a href='磁力吸引.html'>Next</a> >> 磁力吸引</div>
+    <div id="tipue_search_content">W7 << <a href='W7.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一<br /><h1>w8</h1>
+<p>維護網站的方法:</p>
+<p>1.localhost透過token,SSH確定git push權限,SS設定可以透過Putty完成</p>
+<p>2.Replit透過connect功能連結與Github的權限</p>
+<p>3.自架主機s1511.cycu.org&gt;&gt;透過SSH以及分配埠號</p>
+<p>4.<em>(老師我還是愛你)</em></p>
+<br />W7 << <a href='W7.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一</div>
         
     <!-- footer -->
       <div class="container">
