--- a/content/w8.html
+++ b/content/w8.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Yeah body (Click in ◀︎◀︎◀︎)</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='w8.html'>w8</a></li></ul><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='磁力吸引.html'>磁力吸引</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Yeah body (Click in ◀︎◀︎◀︎)</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a></li></ul><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='磁力吸引.html'>磁力吸引</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,13 +142,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W7 << <a href='W7.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一<br /><h1>w8</h1>
+    <div id="tipue_search_content">W7 << <a href='W7.html'>Previous</a> <a href='w9.html'>Next</a> >> w9<br /><h1>w8</h1>
 <p>維護網站的方法:</p>
 <p>1.localhost透過token,SSH確定git push權限,SS設定可以透過Putty完成</p>
 <p>2.Replit透過connect功能連結與Github的權限</p>
 <p>3.自架主機s1511.cycu.org&gt;&gt;透過SSH以及分配埠號</p>
 <p>4.<em>(老師我還是愛你)</em></p>
-<br />W7 << <a href='W7.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一</div>
+<br />W7 << <a href='W7.html'>Previous</a> <a href='w9.html'>Next</a> >> w9</div>
         
     <!-- footer -->
       <div class="container">
