--- a/content/w9.html
+++ b/content/w9.html
@@ -2,6 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,10 +142,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Next</a> >> Yeah body (Click in ◀︎◀︎◀︎)<br /><h1>About</h1>
-<p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
-<p><a href="https://github.com/q36180005/cad2023/settings/pages">倉儲</a></p>
-<br /> <a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Next</a> >> Yeah body (Click in ◀︎◀︎◀︎)</div>
+    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一<br /><h1>w9</h1>
+<p>1.Github在2023年底之後要登入時需要2FA認證</p>
+<p>2.Replit在2024年初不讓免費仔使用了,只能only fan</p>
+<p>3.剩下git clone到近端硬碟再回推回去Github</p>
+<br />w8 << <a href='w8.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一</div>
         
     <!-- footer -->
       <div class="container">
