--- a/config/content.htm
+++ b/config/content.htm
@@ -27,6 +27,10 @@
 <p>2.Replit透過connect功能連結與Github的權限</p>
 <p>3.自架主機s1511.cycu.org&gt;&gt;透過SSH以及分配埠號</p>
 <p>4.<em>(老師我還是愛你)</em></p>
+<h2>w9</h2>
+<p>1.Github在2023年底之後要登入時需要2FA認證</p>
+<p>2.Replit在2024年初不讓免費仔使用了,只能only fan</p>
+<p>3.剩下git clone到近端硬碟再回推回去Github</p>
 <h1>任務一</h1>
 <h2>磁力吸引</h2>
 <p><a href="https://drive.google.com/drive/folders/1BO7KDxjQDuT_zahN7FbU3u7BWFQ_5aKJ?usp=sharing">零件檔案</a></p>
