--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -20,7 +20,14 @@
 <h2>W7</h2>
 <p>1.在w9前畫出3D可列印的零組件模型,包含各個CAD套件以及繪圖完整過程影片</p>
 <p>2.</p>
-<p>   \______________/<br/>  _/_|__________|_\_<br/>   /⭕️⭕️___⭕️⭕️\             -----&lt;&lt;&lt;我努力了<br/>  |___/_Peggy_\____|<br/>  \oo|_|_|____|_|_|oo/</p><h1>任務一</h1>
+<p>   \______________/<br/>  _/_|__________|_\_<br/>   /⭕️⭕️___⭕️⭕️\             -----&lt;&lt;&lt;我努力了<br/>  |___/_Peggy_\____|<br/>  \oo|_|_|____|_|_|oo/</p>
+<h2>w8</h2>
+<p>維護網站的方法:</p>
+<p>1.localhost透過token,SSH確定git push權限,SS設定可以透過Putty完成</p>
+<p>2.Replit透過connect功能連結與Github的權限</p>
+<p>3.自架主機s1511.cycu.org&gt;&gt;透過SSH以及分配埠號</p>
+<p>4.<em>(老師我還是愛你)</em></p>
+<h1>任務一</h1>
 <h2>磁力吸引</h2>
 <p><a href="https://drive.google.com/drive/folders/1BO7KDxjQDuT_zahN7FbU3u7BWFQ_5aKJ?usp=sharing">零件檔案</a></p>
 <h1>Brython</h1>
