--- a/config/content.htm
+++ b/config/content.htm
@@ -31,6 +31,10 @@
 <p>1.Github在2023年底之後要登入時需要2FA認證</p>
 <p>2.Replit在2024年初不讓免費仔使用了,只能only fan</p>
 <p>3.剩下git clone到近端硬碟再回推回去Github</p>
+<h1>Exam</h1>
+<p>1.連到機械設計系ipv6網域之後,可以進去到考試網站裡面{<a href="https://exam.cycu.org/">點我進入</a>}</p>
+<p>2.創辦帳號時,username是學號,然後..................自己應該會創吧(Group:二甲&gt;&gt;cad2023a)</p>
+<p>3.<em>(老師我還是愛著你)</em></p>
 <h1>任務一</h1>
 <h2>磁力吸引</h2>
 <p><a href="https://drive.google.com/drive/folders/1BO7KDxjQDuT_zahN7FbU3u7BWFQ_5aKJ?usp=sharing">零件檔案</a></p>
