--- a/content/Exam.html
+++ b/content/Exam.html
@@ -142,10 +142,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Next</a> >> Yeah body (Click in ◀︎◀︎◀︎)<br /><h1>About</h1>
-<p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
-<p><a href="https://github.com/q36180005/cad2023/settings/pages">倉儲</a></p>
-<br /> <a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Next</a> >> Yeah body (Click in ◀︎◀︎◀︎)</div>
+    <div id="tipue_search_content">w9 << <a href='w9.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一<br /><h1>Exam</h1>
+<p>1.連到機械設計系ipv6網域之後,可以進去到考試網站裡面{<a href="https://exam.cycu.org/">點我進入</a>}</p>
+<p>2.創辦帳號時,username是學號,然後..................自己應該會創吧(Group:二甲&gt;&gt;cad2023a)</p>
+<p>3.<em>(老師我還是愛著你)</em></p>
+<br />w9 << <a href='w9.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一</div>
         
     <!-- footer -->
       <div class="container">
