yeah body 11(car fix)

--- a/config/content.htm
+++ b/config/content.htm
@@ -20,7 +20,8 @@
 <h2>W7</h2>
 <p>1.在w9前畫出3D可列印的零組件模型,包含各個CAD套件以及繪圖完整過程影片</p>
 <p>2.</p>
-<p>   \____________/<br/>  _/_|________|_\_<br/>   /⭕️⭕️____⭕️⭕️\             -----&lt;&lt;&lt;我努力了<br/>  |___/_Peggy_\___|<br/>  \oo|_|_|____|_|_|oo/</p><h2>w8</h2>
+<p>   \____________/<br/>  _/_|________|_\_<br/>   /⭕️⭕️____⭕️⭕️\             -----&lt;&lt;&lt;你覺得帥不帥??<br/>  |___/_Peggy_\___|<br/>  \oo|_|_|____|_|_|oo/</p>
+<h2>w8</h2>
 <p>維護網站的方法:</p>
 <p>1.localhost透過token,SSH確定git push權限,SS設定可以透過Putty完成</p>
 <p>2.Replit透過connect功能連結與Github的權限</p>
