--- a/content/W7.html
+++ b/content/W7.html
@@ -145,7 +145,8 @@ img.add_border {
     <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='w8.html'>Next</a> >> w8<br /><h1>W7</h1>
 <p>1.在w9前畫出3D可列印的零組件模型,包含各個CAD套件以及繪圖完整過程影片</p>
 <p>2.</p>
-<p>   \____________/<br/>  _/_|________|_\_<br/>   /⭕️⭕️____⭕️⭕️\             -----&lt;&lt;&lt;我努力了<br/>  |___/_Peggy_\___|<br/>  \oo|_|_|____|_|_|oo/</p><br />W6 << <a href='W6.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
+<p>   \____________/<br/>  _/_|________|_\_<br/>   /⭕️⭕️____⭕️⭕️\             -----&lt;&lt;&lt;你覺得帥不帥??<br/>  |___/_Peggy_\___|<br/>  \oo|_|_|____|_|_|oo/</p>
+<br />W6 << <a href='W6.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
         
     <!-- footer -->
       <div class="container">
