--- a/content/About.html
+++ b/content/About.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Yeah body (Click in ◀︎◀︎◀︎)</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a></li></ul><li><a href='Exam.html'>Exam</a><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='磁力吸引.html'>磁力吸引</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Yeah body (Click in ◀︎◀︎◀︎)</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='Replit.html'>Replit</a><li><a href='s1511.html'>s1511</a><li><a href='localhost.html'>localhost</a></li></ul><li><a href='Exam.html'>Exam</a><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='磁力吸引.html'>磁力吸引</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -145,6 +145,7 @@ img.add_border {
     <div id="tipue_search_content"> <a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Next</a> >> Yeah body (Click in ◀︎◀︎◀︎)<br /><h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
 <p><a href="https://github.com/q36180005/cad2023/settings/pages">倉儲</a></p>
+<p><a href="https://youtu.be/BbeeuzU5Qc8?si=qZqYZwSyyhJ4Yg6s">我的IG</a>&lt;&lt;&lt;</p>
 <br /> <a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Next</a> >> Yeah body (Click in ◀︎◀︎◀︎)</div>
         
     <!-- footer -->
