--- a/content/Replit.html
+++ b/content/Replit.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,11 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">localhost << <a href='localhost.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一<br /><h1>Exam</h1>
-<p>1.連到機械設計系ipv6網域之後,可以進去到考試網站裡面{<a href="https://exam.cycu.org/">點我進入</a>}</p>
-<p>2.創辦帳號時,username是學號,然後..................自己應該會創吧(Group:二甲&gt;&gt;cad2023a)</p>
-<p>3.<em>(老師我還是愛著你)</em></p>
-<br />localhost << <a href='localhost.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一</div>
+    <div id="tipue_search_content">w9 << <a href='w9.html'>Previous</a> <a href='s1511.html'>Next</a> >> s1511<br /><h1>Replit</h1>
+<p>如何維護網頁? 當在動態網站save剛更新的資料內容後&gt;點擊convert轉換網站&gt;回到replit點擊Git&gt;在update輸入框中輸入更新內容的代名稱&gt;點選上傳(會看到更新的內容已被載入)&gt;最後點擊push&gt;成功!</p>
+<br />w9 << <a href='w9.html'>Previous</a> <a href='s1511.html'>Next</a> >> s1511</div>
         
     <!-- footer -->
       <div class="container">
