--- a/content/Replit.html
+++ b/content/Replit.html
@@ -143,7 +143,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w9 << <a href='w9.html'>Previous</a> <a href='s1511.html'>Next</a> >> s1511<br /><h1>Replit</h1>
-<p>如何維護網頁? 當在動態網站save剛更新的資料內容後&gt;點擊convert轉換網站&gt;回到replit點擊Git&gt;在update輸入框中輸入更新內容的代名稱&gt;點選上傳(會看到更新的內容已被載入)&gt;最後點擊push&gt;成功!</p>
+<p>如何維護網頁? 當在動態網站save剛更新的資料內容後&gt;點擊convert轉換網站&gt;回到replit點擊Git&gt;在update輸入框中輸入更新內容的代名稱&gt;點選stage&amp;commit(會看到更新的內容已被載入)&gt;最後點擊push&gt;成功!</p>
 <br />w9 << <a href='w9.html'>Previous</a> <a href='s1511.html'>Next</a> >> s1511</div>
         
     <!-- footer -->
