--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,7 @@
 <h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
 <p><a href="https://github.com/q36180005/cad2023/settings/pages">倉儲</a></p>
+<p><a href="https://youtu.be/BbeeuzU5Qc8?si=qZqYZwSyyhJ4Yg6s">我的IG</a>&lt;&lt;&lt;</p>
 <h1>Yeah body (Click in ◀︎◀︎◀︎)</h1>
 <h2>w4</h2>
 <p>1.建立線上考試帳號並將Github建立2023倉儲,弄Github Page搞出靜態網站</p>
@@ -31,6 +32,10 @@
 <p>1.Github在2023年底之後要登入時需要2FA認證</p>
 <p>2.Replit在2024年初不讓免費仔使用了,只能only fan</p>
 <p>3.剩下git clone到近端硬碟再回推回去Github</p>
+<h2>Replit</h2>
+<p>如何維護網頁? 當在動態網站save剛更新的資料內容後&gt;點擊convert轉換網站&gt;回到replit點擊Git&gt;在update輸入框中輸入更新內容的代名稱&gt;點選上傳(會看到更新的內容已被載入)&gt;最後點擊push&gt;成功!</p>
+<h2>s1511</h2>
+<h2>localhost</h2>
 <h1>Exam</h1>
 <p>1.連到機械設計系ipv6網域之後,可以進去到考試網站裡面{<a href="https://exam.cycu.org/">點我進入</a>}</p>
 <p>2.創辦帳號時,username是學號,然後..................自己應該會創吧(Group:二甲&gt;&gt;cad2023a)</p>
