--- a/content/s1511.html
+++ b/content/s1511.html
@@ -143,6 +143,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Replit << <a href='Replit.html'>Previous</a> <a href='localhost.html'>Next</a> >> localhost<br /><h1>s1511</h1>
+<p>維護網站的方法:</p>
+<p>1.localhost透過token,SSH確定git push權限,SS設定可以透過Putty完成</p>
+<p>2.Replit透過connect功能連結與Github的權限</p>
+<p>3.自架主機s1511.cycu.org&gt;&gt;透過SSH以及分配埠號</p>
 <br />Replit << <a href='Replit.html'>Previous</a> <a href='localhost.html'>Next</a> >> localhost</div>
         
     <!-- footer -->
