--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -33,8 +33,12 @@
 <p>2.Replit在2024年初不讓免費仔使用了,只能only fan</p>
 <p>3.剩下git clone到近端硬碟再回推回去Github</p>
 <h2>Replit</h2>
-<p>如何維護網頁? 當在動態網站save剛更新的資料內容後&gt;點擊convert轉換網站&gt;回到replit點擊Git&gt;在update輸入框中輸入更新內容的代名稱&gt;點選上傳(會看到更新的內容已被載入)&gt;最後點擊push&gt;成功!</p>
+<p>如何維護網頁? 當在動態網站save剛更新的資料內容後&gt;點擊convert轉換網站&gt;回到replit點擊Git&gt;在update輸入框中輸入更新內容的代名稱&gt;點選stage&amp;commit(會看到更新的內容已被載入)&gt;最後點擊push&gt;成功!</p>
 <h2>s1511</h2>
+<p>維護網站的方法:</p>
+<p>1.localhost透過token,SSH確定git push權限,SS設定可以透過Putty完成</p>
+<p>2.Replit透過connect功能連結與Github的權限</p>
+<p>3.自架主機s1511.cycu.org&gt;&gt;透過SSH以及分配埠號</p>
 <h2>localhost</h2>
 <h1>Exam</h1>
 <p>1.連到機械設計系ipv6網域之後,可以進去到考試網站裡面{<a href="https://exam.cycu.org/">點我進入</a>}</p>
