--- a/content/project1.html
+++ b/content/project1.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,11 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='w8.html'>Next</a> >> w8<br /><h1>W7</h1>
-<p>1.在w9前畫出3D可列印的零組件模型,包含各個CAD套件以及繪圖完整過程影片</p>
-<p>2.</p>
-<p>   \____________/<br/>  _/_|________|_\_<br/>   /⭕️⭕️____⭕️⭕️\             -----&lt;&lt;&lt;你覺得帥不帥??<br/>  |___/_Peggy_\___|<br/>  \oo|_|_|____|_|_|oo/</p>
-<br />W6 << <a href='W6.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
+    <div id="tipue_search_content">Exam << <a href='Exam.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一<br /><h1>project1</h1>
+<br />Exam << <a href='Exam.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一</div>
         
     <!-- footer -->
       <div class="container">
