--- a/content/Exam.html
+++ b/content/Exam.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Yeah body (Click in ◀︎◀︎◀︎)</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='Replit.html'>Replit</a><li><a href='s1511.html'>s1511</a><li><a href='localhost.html'>localhost</a></li></ul><li><a href='Exam.html'>Exam</a><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='磁力吸引.html'>磁力吸引</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Yeah body (Click in ◀︎◀︎◀︎)</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='Replit.html'>Replit</a><li><a href='s1511.html'>s1511</a><li><a href='localhost.html'>localhost</a></li></ul><li><a href='Exam.html'>Exam</a><li><a href='project1.html'>project1</a><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='磁力吸引.html'>磁力吸引</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,11 +142,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">localhost << <a href='localhost.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一<br /><h1>Exam</h1>
+    <div id="tipue_search_content">localhost << <a href='localhost.html'>Previous</a> <a href='project1.html'>Next</a> >> project1<br /><h1>Exam</h1>
 <p>1.連到機械設計系ipv6網域之後,可以進去到考試網站裡面{<a href="https://exam.cycu.org/">點我進入</a>}</p>
 <p>2.創辦帳號時,username是學號,然後..................自己應該會創吧(Group:二甲&gt;&gt;cad2023a)</p>
 <p>3.<em>(老師我還是愛著你)</em></p>
-<br />localhost << <a href='localhost.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一</div>
+<br />localhost << <a href='localhost.html'>Previous</a> <a href='project1.html'>Next</a> >> project1</div>
         
     <!-- footer -->
       <div class="container">
