--- a/content/Exam.html
+++ b/content/Exam.html
@@ -145,7 +145,7 @@ img.add_border {
     <div id="tipue_search_content">localhost << <a href='localhost.html'>Previous</a> <a href='project1.html'>Next</a> >> project1<br /><h1>Exam</h1>
 <p>1.連到機械設計系ipv6網域之後,可以進去到考試網站裡面{<a href="https://exam.cycu.org/">點我進入</a>}</p>
 <p>2.創辦帳號時,username是學號,然後..................自己應該會創吧(Group:二甲&gt;&gt;cad2023a)</p>
-<p>3.<em>(老師我還是愛著你)</em></p>
+<p>3.<em>(老師我愛你)</em></p>
 <br />localhost << <a href='localhost.html'>Previous</a> <a href='project1.html'>Next</a> >> project1</div>
         
     <!-- footer -->
