--- a/content/index.html
+++ b/content/index.html
@@ -143,8 +143,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Next</a> >> Yeah body (Click in ◀︎◀︎◀︎)<br /><h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
-<p><a href="https://github.com/q36180005/cad2023/settings/pages">倉儲</a></p>
-<p><a href="https://youtu.be/BbeeuzU5Qc8?si=qZqYZwSyyhJ4Yg6s">我的IG</a>&lt;&lt;&lt;</p>
+<p><a href="https://github.com/q36180005/cad2023/settings/pages">倉儲</a>&lt;&lt;&lt;</p>
+<p></p>
 <br /> <a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Next</a> >> Yeah body (Click in ◀︎◀︎◀︎)</div>
         
     <!-- footer -->
