--- a/content/w8.html
+++ b/content/w8.html
@@ -147,7 +147,7 @@ img.add_border {
 <p>1.localhost透過token,SSH確定git push權限,SS設定可以透過Putty完成</p>
 <p>2.Replit透過connect功能連結與Github的權限</p>
 <p>3.自架主機s1511.cycu.org&gt;&gt;透過SSH以及分配埠號</p>
-<p>4.<em>(老師我還是愛你)</em></p>
+<p>4.<em>(老師我愛你)</em></p>
 <br />W7 << <a href='W7.html'>Previous</a> <a href='w9.html'>Next</a> >> w9</div>
         
     <!-- footer -->
