--- a/content/w14.html
+++ b/content/w14.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,8 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">project1 << <a href='project1.html'>Previous</a> <a href='磁力吸引.html'>Next</a> >> 磁力吸引<br /><h1>任務一</h1>
-<br />project1 << <a href='project1.html'>Previous</a> <a href='磁力吸引.html'>Next</a> >> 磁力吸引</div>
+    <div id="tipue_search_content">w9 << <a href='w9.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit<br /><h1>w14</h1>
+<p>acp</p>
+<br />w9 << <a href='w9.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit</div>
         
     <!-- footer -->
       <div class="container">
