--- a/content/W15.html
+++ b/content/W15.html
@@ -143,7 +143,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit<br /><h1>W15</h1>
-<p>永動機模擬操作</p>
+<p>永動機模擬操作.</p>
 <p><a href="./../downloads/永動機零件組合.mp4">wink影片</a>(修正一)</p>
 <p><a href="https://drive.google.com/drive/folders/1Kn7Mc7ru3VQ2qqkLjSvjucifw8PDFAzk?usp=sharing">零件檔案</a></p>
 <br />w14 << <a href='w14.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit</div>
