w16-評分項目新增(一定不被當)

--- a/content/W16.html
+++ b/content/W16.html
@@ -142,11 +142,21 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='W16.html'>Next</a> >> W16<br /><h1>W15</h1>
-<p>永動機模擬操作.</p>
-<p><a href="./../downloads/永動機零件組合.mp4">wink影片</a>(修正一)</p>
-<p><a href="https://drive.google.com/drive/folders/1Kn7Mc7ru3VQ2qqkLjSvjucifw8PDFAzk?usp=sharing">零件檔案</a></p>
-<br />w14 << <a href='w14.html'>Previous</a> <a href='W16.html'>Next</a> >> W16</div>
+    <div id="tipue_search_content">W15 << <a href='W15.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit<br /><h1>W16</h1>
+<p>倉儲網站與評分項目</p>
+<p><span>A: 是否<span style="color: #ff9900;">按照進度明確標示倉儲的改版歷程</span></span></p>
+<p><span>B: 是否根據<span style="color: #ff9900;"> IPv4 與 IPv6</span><span> </span>網路環境設定進行作法討論</span></p>
+<p><span>C: 是否就<span><span> </span><span style="color: #ff9900;">Replit、s.cycu.org 與 localhost</span></span><span> </span>情境下對個人與分組倉儲進行設定操作</span></p>
+<p><span>D: 是否就所分配的<span> </span><span style="color: #ff9900;">CAD 套件</span>從安裝設定到繪圖提供內容參考</span></p>
+<p><span>E: 是否使用所分配的 CAD 套件<span style="color: #ff9900;">完成專案一零組件繪圖</span>, 並提供零組件下載</span></p>
+<p><span>F: 是否將自行繪製的專案一零組件<span style="color: #ff9900;">轉入 CoppeliaSim</span></span></p>
+<p><span>G: 是否<span style="color: #ff9900;">利用 ZMQ Remote API Python</span><span> </span>對專案一轉入的零組件設定感測器, 並進行<span>鋼球永動模擬</span></span></p>
+<p><span>H: 是否<span style="color: #ff9900;">實際操作 Triangle 軌道系統的鋼球永動模擬</span></span></p>
+<p><span>I: 是否完成 W15 的<span style="color: #ff9900;">平面雙 U 迴路上的鋼球永動系統繪圖、轉檔與系統模擬</span></span></p>
+<p><span>J: 是否使用所分配的<span style="color: #ff9900;"> CAD 套件完成專案二 1D 平台零組件繪圖</span>, 並提供零組件下載</span></p>
+<p><span>K: 是否<span style="color: #ff9900;">利用 ZMQ Remote API Python 對專案二轉入的零組件設定感測器</span>, 並進行鋼球永動模擬</span></p>
+<p><span>L: 是否針對<span style="color: #ff9900;">專案二的 1D 平台鋼球平衡系統所需的 PID 控制理論進行資料收集與 ChatGPT 對答</span></span></p>
+<br />W15 << <a href='W15.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit</div>
         
     <!-- footer -->
       <div class="container">
