網路設定新增(嘿嘿我來了)

--- a/content/網路設定.html
+++ b/content/網路設定.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,10 +142,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w4 << <a href='w4.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>W5</h1>
-<p>1.選擇用soliwork畫出零組件</p>
-<p>2.認識CoppeliaSim然後學</p>
-<br />w4 << <a href='w4.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
+    <div id="tipue_search_content">project1 << <a href='project1.html'>Previous</a> <a href='任務一(專案一).html'>Next</a> >> 任務一(專案一)<br /><h1>網路設定</h1>
+<p>{前提&gt;<span>由於電腦輔助設計室某部分套件, 在 IPv4 網路環境下會被防毒軟體偵測到封包異常而封閉網路, 因此以下將 IPv4 網路關閉, 僅使用 IPv6, 並透過雙網路協定支援的代理主機設定, 以便與僅支援 IPv4 的網路主機連線}</span></p>
+<p>意思也就是ipv4不要用就對了,那個都幾年前的東西了,ipv6還比較好一點</p>
+<p>&gt;&gt;&gt;&gt;<span>利用隨身碟上的批次檔案進行電腦輔助設計室網路環境設定{<a href="https://nfuedu-my.sharepoint.com/personal/yen_nfu_edu_tw/_layouts/15/stream.aspx?id=%2Fpersonal%2Fyen%5Fnfu%5Fedu%5Ftw%2FDocuments%2F2023%2Fcad2023%2Fmp4%2Fcadlab%5F%E7%B6%B2%E8%B7%AF%E8%A8%AD%E5%AE%9A%2Emp4&amp;nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0RpcmVjdCJ9fQ&amp;ga=1&amp;referrer=StreamWebApp%2EWeb&amp;referrerScenario=AddressBarCopied%2Eview">老師的影片</a>}</span></p>
+<p><span>Reference--&gt;mde.tw&gt;cadnote&gt;網路設定</span></p>
+<br />project1 << <a href='project1.html'>Previous</a> <a href='任務一(專案一).html'>Next</a> >> 任務一(專案一)</div>
         
     <!-- footer -->
       <div class="container">
