--- a/content/W7.html
+++ b/content/W7.html
@@ -143,7 +143,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='w8.html'>Next</a> >> w8<br /><h1>W7</h1>
-<p>1.在w9前畫出3D可列印的零組件模型,包含各個CAD套件以及繪圖完整過程影片</p>
+<p>1.在w9前畫出3D可列印的零組件模型,包含各個CAD套件以及繪圖完整過程影片(哪些軟體??</p>
+<p>&gt;&gt;&gt;&gt;soliworks&lt;&gt;NX&lt;&gt;Inventor&lt;&gt;Solid Edge&lt;&gt;Creo&lt;&gt;Oneshape&lt;&gt;Fusion 360&lt;)</p>
+<p>{以上有些須從學校網站下載以及其他地方下載(我知道你懶惰&gt;<a href="https://mde.tw/cadnote/content/w6-w7.html">直接進來點快捷網址</a>)&lt;&lt;<span>Reference&gt;mde.tw&gt;cadnote&gt;W7</span>}</p>
 <p>2.</p>
 <p>   \____________/<br/>  _/_|________|_\_<br/>   /⭕️⭕️____⭕️⭕️\             -----&lt;&lt;&lt;你覺得帥不帥??<br/>  |___/_Peggy_\___|<br/>  \oo|_|_|____|_|_|oo/</p>
 <br />W6 << <a href='W6.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
