--- a/content/網路設定.html
+++ b/content/網路設定.html
@@ -147,6 +147,8 @@ img.add_border {
 <p>意思也就是ipv4不要用就對了,那個都幾年前的東西了,ipv6還比較好一點</p>
 <p>&gt;&gt;&gt;&gt;<span>利用隨身碟上的批次檔案進行電腦輔助設計室網路環境設定{<a href="https://nfuedu-my.sharepoint.com/personal/yen_nfu_edu_tw/_layouts/15/stream.aspx?id=%2Fpersonal%2Fyen%5Fnfu%5Fedu%5Ftw%2FDocuments%2F2023%2Fcad2023%2Fmp4%2Fcadlab%5F%E7%B6%B2%E8%B7%AF%E8%A8%AD%E5%AE%9A%2Emp4&amp;nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0RpcmVjdCJ9fQ&amp;ga=1&amp;referrer=StreamWebApp%2EWeb&amp;referrerScenario=AddressBarCopied%2Eview">老師的影片</a>}</span></p>
 <p><span>Reference--&gt;mde.tw&gt;cadnote&gt;網路設定</span></p>
+<p><span>學員的ipv6位址(2a學員):2001:288:6004:17:2023:cada::<a href="https://mde.tw/cadnote/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/9215c7c160119721ded887018cda8f4e/raw/afc0e4d2267199743ac44bc7aeb0c4b195a30abb/generate_cad2023_2a_site_repo.py">班級名單</a></span></p>
+<p><span>Reference--&gt;mde.tw&gt;cadnote&gt;網路設定</span></p>
 <br />project1 << <a href='project1.html'>Previous</a> <a href='任務一(專案一).html'>Next</a> >> 任務一(專案一)</div>
         
     <!-- footer -->
