--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -66,6 +66,11 @@
 <p>2.創辦帳號時,username是學號,然後..................自己應該會創吧(Group:二甲&gt;&gt;cad2023a)</p>
 <p>3.<em>(老師我愛你)</em></p>
 <h1>project1</h1>
+<h1>網路設定</h1>
+<p>{前提&gt;<span>由於電腦輔助設計室某部分套件, 在 IPv4 網路環境下會被防毒軟體偵測到封包異常而封閉網路, 因此以下將 IPv4 網路關閉, 僅使用 IPv6, 並透過雙網路協定支援的代理主機設定, 以便與僅支援 IPv4 的網路主機連線}</span></p>
+<p>意思也就是ipv4不要用就對了,那個都幾年前的東西了,ipv6還比較好一點</p>
+<p>&gt;&gt;&gt;&gt;<span>利用隨身碟上的批次檔案進行電腦輔助設計室網路環境設定{<a href="https://nfuedu-my.sharepoint.com/personal/yen_nfu_edu_tw/_layouts/15/stream.aspx?id=%2Fpersonal%2Fyen%5Fnfu%5Fedu%5Ftw%2FDocuments%2F2023%2Fcad2023%2Fmp4%2Fcadlab%5F%E7%B6%B2%E8%B7%AF%E8%A8%AD%E5%AE%9A%2Emp4&amp;nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0RpcmVjdCJ9fQ&amp;ga=1&amp;referrer=StreamWebApp%2EWeb&amp;referrerScenario=AddressBarCopied%2Eview">老師的影片</a>}</span></p>
+<p><span>Reference--&gt;mde.tw&gt;cadnote&gt;網路設定</span></p>
 <h1>任務一(專案一)</h1>
 <h2>磁力吸引</h2>
 <p><a href="https://drive.google.com/drive/folders/1BO7KDxjQDuT_zahN7FbU3u7BWFQ_5aKJ?usp=sharing">零件檔案</a></p>
