磁力裝置新增小東西(補全零件)

--- a/config/content.htm
+++ b/config/content.htm
@@ -77,7 +77,7 @@
 <p><span>Reference--&gt;mde.tw&gt;cadnote&gt;網路設定</span></p>
 <h1>任務一(專案一)</h1>
 <h2>磁力吸引</h2>
-<p><a href="https://drive.google.com/drive/folders/1BO7KDxjQDuT_zahN7FbU3u7BWFQ_5aKJ?usp=sharing">零件檔案</a></p>
+<p><a href="https://drive.google.com/drive/folders/1BO7KDxjQDuT_zahN7FbU3u7BWFQ_5aKJ?usp=sharing">零件檔案</a>(&lt;&lt;&lt;有更動過,以最新上傳日期為準)</p>
 <p>&gt;&gt;&gt;&gt;&gt;&gt;&gt;以下 <span>Reference:大佬授權使用</span></p>
 <p><span>如果新增了感測器 &gt; 鋼珠會穿模(也就是會飛出去)</span></p>
 <p><img alt="" height="458" src="/images/666.gif" width="678"/></p>
