--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -19,7 +19,9 @@
 <p><a href="https://41123120.github.io/cad2023_ag1/content/index.html">第一組age1</a> {<a href="https://github.com/41123120/cad2023_ag1">repo</a>}</p>
 <p><a href="https://probe2004.github.io/cad2023_ag2/content/%E5%BE%85%E8%BE%A6%E4%BA%8B%E9%A0%85.html"></a></p>
 <h2>W7</h2>
-<p>1.在w9前畫出3D可列印的零組件模型,包含各個CAD套件以及繪圖完整過程影片</p>
+<p>1.在w9前畫出3D可列印的零組件模型,包含各個CAD套件以及繪圖完整過程影片(哪些軟體??</p>
+<p>&gt;&gt;&gt;&gt;soliworks&lt;&gt;NX&lt;&gt;Inventor&lt;&gt;Solid Edge&lt;&gt;Creo&lt;&gt;Oneshape&lt;&gt;Fusion 360&lt;)</p>
+<p>{以上有些須從學校網站下載以及其他地方下載(我知道你懶惰&gt;<a href="https://mde.tw/cadnote/content/w6-w7.html">直接進來點快捷網址</a>)&lt;&lt;<span>Reference&gt;mde.tw&gt;cadnote&gt;W7</span>}</p>
 <p>2.</p>
 <p>   \____________/<br/>  _/_|________|_\_<br/>   /⭕️⭕️____⭕️⭕️\             -----&lt;&lt;&lt;你覺得帥不帥??<br/>  |___/_Peggy_\___|<br/>  \oo|_|_|____|_|_|oo/</p>
 <h2>w8</h2>
@@ -70,6 +72,8 @@
 <p>{前提&gt;<span>由於電腦輔助設計室某部分套件, 在 IPv4 網路環境下會被防毒軟體偵測到封包異常而封閉網路, 因此以下將 IPv4 網路關閉, 僅使用 IPv6, 並透過雙網路協定支援的代理主機設定, 以便與僅支援 IPv4 的網路主機連線}</span></p>
 <p>意思也就是ipv4不要用就對了,那個都幾年前的東西了,ipv6還比較好一點</p>
 <p>&gt;&gt;&gt;&gt;<span>利用隨身碟上的批次檔案進行電腦輔助設計室網路環境設定{<a href="https://nfuedu-my.sharepoint.com/personal/yen_nfu_edu_tw/_layouts/15/stream.aspx?id=%2Fpersonal%2Fyen%5Fnfu%5Fedu%5Ftw%2FDocuments%2F2023%2Fcad2023%2Fmp4%2Fcadlab%5F%E7%B6%B2%E8%B7%AF%E8%A8%AD%E5%AE%9A%2Emp4&amp;nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0RpcmVjdCJ9fQ&amp;ga=1&amp;referrer=StreamWebApp%2EWeb&amp;referrerScenario=AddressBarCopied%2Eview">老師的影片</a>}</span></p>
+<p><span>Reference--&gt;mde.tw&gt;cadnote&gt;網路設定</span></p>
+<p><span>學員的ipv6位址(2a學員):2001:288:6004:17:2023:cada::<a href="https://mde.tw/cadnote/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/9215c7c160119721ded887018cda8f4e/raw/afc0e4d2267199743ac44bc7aeb0c4b195a30abb/generate_cad2023_2a_site_repo.py">班級名單</a></span></p>
 <p><span>Reference--&gt;mde.tw&gt;cadnote&gt;網路設定</span></p>
 <h1>任務一(專案一)</h1>
 <h2>磁力吸引</h2>
