--- a/content/磁力吸引.html
+++ b/content/磁力吸引.html
@@ -143,7 +143,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">任務一(專案一) << <a href='任務一(專案一).html'>Previous</a> <a href='專案二.html'>Next</a> >> 專案二<br /><h1>磁力吸引</h1>
-<p><a href="https://drive.google.com/drive/folders/1BO7KDxjQDuT_zahN7FbU3u7BWFQ_5aKJ?usp=sharing">零件檔案</a></p>
+<p><a href="https://drive.google.com/drive/folders/1BO7KDxjQDuT_zahN7FbU3u7BWFQ_5aKJ?usp=sharing">零件檔案</a>(&lt;&lt;&lt;有更動過,以最新上傳日期為準)</p>
 <p>&gt;&gt;&gt;&gt;&gt;&gt;&gt;以下 <span>Reference:大佬授權使用</span></p>
 <p><span>如果新增了感測器 &gt; 鋼珠會穿模(也就是會飛出去)</span></p>
 <p><img alt="" height="458" src="./../images/666.gif" width="678"/></p>
